--- a/portfolio.css
+++ b/portfolio.css
@@ -111,13 +111,12 @@ footer a:hover
 }
 
 
-
-@media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 700px) {
   
-  footer {
-    font-size: 90%;
-  }
-
+    html, p, .navbar-brand, .btn, footer {
+      font-size: 90% !important;
+    }
+  
 
 }
 
