--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ footer a:hover
 
 @media only screen and (max-width: 600px) {
   
-  html, p, .navbar-brand, .btn, footer {
+  html, body, .navbar-brand, .btn, footer {
     font-size: 90% !important;
   }
 
